--- a/index.html
+++ b/index.html
@@ -856,9 +856,10 @@
     </div>
 
     <footer class="footer">
-      <div>BlinkCheck · educational eye comfort project (non-medical).</div>
-      <div>All answers stay in this browser tab and disappear when you close it.</div>
-    </footer>
+   <div><strong>BlinkCheck v1.0</strong> — created by <strong>Dr. Pranavi Kilaru and Dr. Pranati Kilaru</strong> (MBBS).</div>
+   <div>This tool is educational, non-medical, and stores no data.</div>
+   </footer>
+
   </div>
 
   <script>
