--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
     </div>
 
     <footer class="footer">
-   <div><strong>BlinkCheck v1.0</strong> — created by <strong>Dr. Pranavi Kilaru and Dr. Pranati Kilaru</strong> (MBBS).</div>
+   <div><strong>BlinkCheck v1.0</strong> — a <strong>SOS-ter Studios</strong> production — created by <strong>Dr. Pranavi Kilaru and Dr. Pranati Kilaru</strong> (MBBS).</div>
    <div>This tool is educational, non-medical, and stores no data.</div>
    </footer>
 
